force-app/main/default/objects/Release__c/fields/Additions__c.field-meta.xml
<CustomField>
    <fullName>Additions__c</fullName>
    <description>What additions were introduced as part of the release?</description>
    <inlineHelpText>Seperate each item was a new line</inlineHelpText>
    <label>Additions</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>