force-app/main/default/objects/Release__c/fields/Changes__c.field-meta.xml
<CustomField>
    <fullName>Changes__c</fullName>
    <description>What changes were made to existing capabilities as part of this release?</description>
    <inlineHelpText>Seperate each item was a new line</inlineHelpText>
    <label>Changes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>