force-app/main/default/objects/Release__c/fields/Removals__c.field-meta.xml
<CustomField>
    <fullName>Removals__c</fullName>
    <description>What was removed as part of this release?</description>
    <inlineHelpText>Seperate each item was a new line</inlineHelpText>
    <label>Removals</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>